--- a/CSS/style.css
+++ b/CSS/style.css
@@ -62,6 +62,11 @@ h1 {
     font-size: 2rem;
 }
 
+p {
+    font-size: 15px;
+    line-height: 25px;
+}
+
 .theme-toggle {
     background: none;
     border: none;
