--- a/CSS/style.css
+++ b/CSS/style.css
@@ -52,7 +52,7 @@ body {
 header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     margin-bottom: 30px;
     width: 100%;
     flex-direction: column;
@@ -60,18 +60,17 @@ header {
 
 .heading-and-toggle{
     display: flex;
+    position: relative;
 }
 
 h1 {
     color: var(--primary-color);
     font-size: 2rem;
-    text-align: center;
 }
 
 p {
     font-size: 15px;
     line-height: 25px;
-    text-align: center;
 }
 
 .theme-toggle {
@@ -83,6 +82,9 @@ p {
     padding: 8px;
     border-radius: 50%;
     transition: transform 0.2s;
+    position: absolute;
+    left: 100%;
+    top: 5px;
 }
 
 
