--- a/CSS/style.css
+++ b/CSS/style.css
@@ -236,6 +236,9 @@ p {
     .container{
         padding: 0;
     }
+    .heading-and-toggle{
+        column-gap: 10px;
+    }
     h1 {
         font-size: 1.5rem;
     }
