--- a/CSS/style.css
+++ b/CSS/style.css
@@ -97,7 +97,7 @@ p {
     flex-grow: 1;
     padding: 12px 15px;
     border: 2px solid var(--border-color);
-    border-radius: 4px;
+    border-radius: 0px;
     font-size: 1rem;
     background-color: var(--card-color);
     color: var(--text-color);
@@ -106,7 +106,9 @@ p {
 
 .todo-input:focus {
     outline: none;
-    border-color: var(--primary-color);
+    box-shadow: 0px 20px 49px 4px rgba(74,111,165,0.48);
+    -webkit-box-shadow: 0px 20px 49px 4px rgba(74,111,165,0.48);
+    -moz-box-shadow: 0px 20px 49px 4px rgba(74,111,165,0.48);
 }
 
 .add-btn {
@@ -114,7 +116,7 @@ p {
     background-color: var(--primary-color);
     color: white;
     border: none;
-    border-radius: 4px;
+    border-radius: 0px;
     margin-left: 10px;
     cursor: pointer;
     font-size: 1rem;
