--- a/CSS/style.css
+++ b/CSS/style.css
@@ -106,9 +106,10 @@ p {
 
 .todo-input:focus {
     outline: none;
-    box-shadow: 0px 20px 49px 4px rgba(74,111,165,0.48);
-    -webkit-box-shadow: 0px 20px 49px 4px rgba(74,111,165,0.48);
-    -moz-box-shadow: 0px 20px 49px 4px rgba(74,111,165,0.48);
+    border-color: transparent;
+    box-shadow: 0px 15px 30px 4px rgba(74,111,165,0.48);
+    -webkit-box-shadow: 0px 15px 30px 4px rgba(74,111,165,0.48);
+    -moz-box-shadow: 0px 15px 30px 4px rgba(74,111,165,0.48);
 }
 
 .add-btn {
